--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7z/5v8cn40x2k701p5sng7ywpj80000gn/T/ipykernel_6827/2813101324.py:6: SADeprecationWarning: The AutomapBase.prepare.reflect parameter is deprecated and will be removed in a future release.  Reflection is enabled when AutomapBase.prepare.autoload_with is passed.\n",
+      "/var/folders/7z/5v8cn40x2k701p5sng7ywpj80000gn/T/ipykernel_17937/2813101324.py:6: SADeprecationWarning: The AutomapBase.prepare.reflect parameter is deprecated and will be removed in a future release.  Reflection is enabled when AutomapBase.prepare.autoload_with is passed.\n",
       "  Base.prepare(engine, reflect=True)\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,29 +129,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('2017-08-23',)"
+       "'2017-08-23'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
-    "most_recent_date = session.query(Measurement.date).order_by(sqlalchemy.desc(Measurement.date)).first()\n",
+    "most_recent_date = session.query(Measurement.date).order_by(Measurement.date.desc()).first()[0]\n",
     "most_recent_date\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
     "most_recent_date_str = pd.to_datetime(most_recent_date).strftime(\"%Y-%m-%d\")\n",
-    "most_recent_date = datetime.strptime(most_recent_date_str, '%Y-%m-%d')\n",
+    "most_recent_date = datetime.strptime(most_recent_date_str,'%Y-%m-%d')\n",
     "one_year_ago = most_recent_date - timedelta(days=366)\n",
     "\n",
     "\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[(9,)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
